--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body{
     box-shadow: 0px 0px 9px 2px rgba(0,0,0,0.1);
 }
 
+button:disabled{
+    background-color:#30ffe36b;
+    cursor: not-allowed;
+}
 
 /* customize dateRange styles */
 .rdrCalendarWrapper{
